--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -33,16 +33,16 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q4 content clearfix">
+          <div class="content-line">
+            <div class="cell up-left">固定</div>
+            <div class="cell up-center">可変</div>
+            <div class="cell up-right">固定</div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="content-line">
+            <div class="cell down-left">可変</div>
+            <div class="cell down-center">可変</div>
+            <div class="cell down-right">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
