--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -38,15 +38,15 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+          <div class="block block-8">8</div>
+          <div class="block block-5">5</div>
+          <div class="block block-1">1</div>
+          <div class="block block-7">7</div>
+          <div class="block block-4">4</div>
+          <div class="block block-6">6</div>
+          <div class="block block-2">2</div>
+          <div class="block block-3">3</div>
+          <div class="block block-9">9</div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
