--- a/layout_parts/q9/index.html
+++ b/layout_parts/q9/index.html
@@ -41,8 +41,13 @@
           -->
           <!-- 回答はクラスq9の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
-          <div class="q9">
-            
+          <div class="q9 q9-trans">
+            <div class="ani-trans">
+              <img class="image" src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q9/thumb.jpg" alt="">
+              <div class="text">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+              </div>
+            </div>
           </div>
           <!-- 回答はクラスq9の要素の中に書いてね -->
         </div>
@@ -63,7 +68,10 @@
           <!-- 回答はクラスq9の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <div class="q9">
-            
+            <div class="out-circle">
+              <div class="out-circle-anime"></div>
+              <div class="in-circle"></div>
+            </div>
           </div>
           <!-- 回答はクラスq9の要素の中に書いてね -->
         </div>
