layout_part 修正しました

--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -150,7 +150,7 @@
                       <div class="input-checkbox">
                         <label>
                           <input class="checkbox-button" type="checkbox" name="twenty" id="checkbox" value="true">
-                          <label class="checkbox-text" for="checkbox">私は20歳以上です</label>
+                          <span class="checkbox-text">私は20歳以上です</span>
                         </label>
                       </div>
                     </li>   
